add navigation for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@
 .logo {
   width: 40px;
 }
-.hero-image {
-  padding-top: 3rem;
+.about-image {
+height: 400px;
+  position: relative;
+  background-color: var(--white);
 }
