--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 :root {
   --blue: rgba(0, 0, 255, 1);
   --red: rgba(255, 0, 0, 1);
-  --light-blue: rgb(190, 218, 227);
+  --light-blue: rgb(215, 235, 241);
   --black: #0a0a0a;
-  --white: #fafafa;
+  --white: #ffffff;
 }
 * {
   margin: 0;
