add solution hero-section

--- a/src/App.css
+++ b/src/App.css
@@ -7,16 +7,20 @@
   width: 40px;
 }
 .about-image {
-height: 400px;
+  height: 400px;
   position: relative;
   background-color: var(--white);
 }
-.left-blur{
+.left-blur {
   width: 50px;
-position: absolute;
-top: 0;
-bottom: 0;
-opacity: .5;}
-.card-image{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  opacity: 0.5;
+}
+
+.card-image {
+  width: 500px;
+  height: 250px;
   border-radius: 1rem 1rem 0 0rem;
 }
